<resources>
    <string name="app_name">Grocery Shop</string>
    <string name="your_string_here">  <u>SIGN UP</u>.</string>
    <string name="facebook_app_id">993347248271340</string>
    <string name="fb_login_protocol_scheme">fb993347248271340</string>
    <string name="login">Login</string>
    <string name="simple_txt_digits">qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="simple_phone_digits">0987654321</string>
    <string name="simple_password_digits">qwertyuiopasdfghjklzxcvbnm 1234567890 !@#$%^*() QWERTYUIOPASDFGHJKLZXCVBNM
    </string>
    <string name="simple_email_digits">qwertyuiopasdfghjklzxcvbnm 1234567890 _!@#$%^*(). QWERTYUIOPASDFGHJKLZXCVBNM
    </string>
    <string name="simple_name_digits">qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="TEXT_HINT_INPUT_FEEDBACK_DETAIL">Nhập nội dung đánh giá</string>
    <string name="full_name">Full name</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="age_of_contestent">Date of Birth (required if you are contestant)</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">Sign up</string>
    <string name="already_account">Already have an account?</string>
    <string name="register_agree">By Signing up you are agreeing to our</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_testing">testing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="select_source">Select Source</string>
    <string name="new_password">New Password</string>
    <string name="add">Add</string>
    <string name="currency">$</string>
    <string name="products">Products</string>
    <string name="featured_products">Featured Products</string>
    <string name="view_all">View All</string>
    <string name="qty">Quantity</string>
    <string name="item_price">Item Price:</string>
    <string name="orders_summary">Order Summary</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="service_fee">Service Fee</string>
    <string name="grand_total">Grand total</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="item_total">Total</string>
    <string name="discount_price">Discount Price</string>
    <string name="process_to_checkout">Proceed to checkout</string>
    <string name="thank_you">Thank You</string>
    <string name="thank_you_uploaded">Thank You for uploading video</string>
    <string name="no_data_found">No Data Found</string>
    <string name="cart">Cart</string>
    <string name="check_out">Checkout</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="change">Change</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="on_demand">On Demand</string>
    <string name="schedule_delivery">Schedule Delivery</string>
    <string name="payment_options">Payment Options</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="credit_debit_card">Card On Delivery</string>
    <string name="credit_card">Credit/Debit card</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="any_special_instructions">Special Instructions</string>
    <string name="redeem">Redeem</string>
    <string name="promo_code">Promo Code</string>
    <string name="have_a_promo_code">Enter promocode</string>
    <string name="place_your_order">Place Your Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_placed">Order Placed</string>
    <string name="address1">Full Address</string>
    <string name="date">Schedule Date</string>
    <string name="time">Schedule Time</string>
    <string name="date_required">Please select date before time.</string>
    <string name="apply_coupons">Apply Coupons</string>
    <string name="address_required">Please select address of delivery.</string>
    <string name="add_card">Add New Card</string>
    <string name="please_enter_your_instructions">Please enter your instructions...</string>
    <string name="schedule_date_required">Schedule date required</string>
    <string name="schedule_time_required">Schedule time required</string>
    <string name="add_card_first">Please add card</string>
    <string name="items">Items</string>
    <string name="time_should_be_greater_than_current_time">Time Should be greater than current time</string>
    <string name="e_com">E-Com</string>
    <string name="product_details">Product Detail</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="product_description">Product Description</string>
    <string name="discount_dummay">Discount</string>
    <string name="reviews">Reviews</string>
    <string name="product_qty_greater_than_1">Product quantity greater than 1.</string>
    <string name="add_address">Add Address</string>
    <string name="address_type">Address Type</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="search_offer">Search Offer</string>
    <string name="home">Home</string>
    <string name="house_flat_block">Home/Flat/Block No.</string>
    <string name="landmark">Landmark</string>
    <string name="select_delivery_zone">Select Delivery Zone</string>
    <string name="submit">Submit</string>
    <string name="address_list">Address List</string>
    <string name="no_address_found">No Address Found</string>
    <string name="select_house_no">Select house number</string>
    <string name="select_full_adddress">Please select full address</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="delete_notifications">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="apply">Apply</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="thank_you_for_order">Thank you for your order.</string>
    <string name="track_your_order">Track your order</string>
    <string name="order_confirmed">Order confirmed</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="out_of_quantity">Out of Quantity</string>
    <string name="wish_list">Wish List</string>
    <string name="sorting">Sorting</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="order_history">Order History</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="order_id">Order Id</string>
    <string name="rate_us">Rate Us</string>
    <string name="review_rating">Review and Rating</string>
    <string name="please_rate_us">Please rate us</string>
    <string name="enter_message">Enter message</string>
    <string name="cancel">Cancel</string>
    <string name="error_message_1000">Error! Please try again!</string>
    <string name="toast_enter_name">Please enter name</string>
    <string name="toast_invalid_name">Please enter name minimum 3 and maximum 30 length</string>
    <string name="toast_enter_phone_number">Please enter mobile number</string>
    <string name="toast_enter_valid_phone_number">Please enter valid mobile number</string>
    <string name="toast_enter_email">Please enter email address</string>
    <string name="toast_enter_valid_email">Please enter valid email address</string>
    <string name="toast_enter_age">Please enter date of birth</string>
    <string name="toast_enter_valid_age">Please enter name minimum 18 and maximum 100</string>
    <string name="toast_enter_password">Please enter password</string>
    <string name="toast_enter_valid_password">Password should be between 7 to 15 digits and need at least 1 uppercase character and 1 special character</string>
    <string name="toast_enter_confirm_password">Please enter confirm password</string>
    <string name="toast_enter_true_confirm_password">Password and rePassword does not match.</string>
    <string name="toast_please_accept_term">Please accept terms</string>
    <string name="toast_wrong">Something went wrong, please try again!</string>
    <string name="toast_uploaded">Your video has uploaded successfully!</string>
    <string name="toast_change_pw">Changed password!</string>
    <string name="toast_enter_song_name">Please enter song name</string>
    <string name="toast_enter_artist_name">Please enter artist name</string>
    <string name="toast_enter_description">Please enter description</string>
    <string name="toast_enter_genre">Please choose genre</string>
    <string name="toast_video_too_long">Your video file is too long! Please try again later</string>
    <string name="alert_account_is_empty">Username is required</string>
    <string name="text_user_name">Username </string>
    <string name="alert_verify_code_is_invalid">Verify code is invalid</string>
    <string name="alert_email_is_empty">Enter email address</string>
    <string name="alert_email_is_invalid">Email is invalid</string>
    <string name="alert_video_is_empty">Please select video</string>
    <string name="alert_waiting_video_compressing">Please wait until the video is finished compressing and try again</string>
    <string name="message_encourage_get_voucher">Limited offer, enter your code quickly!</string>
    <string name="text_guide">Guide</string>
    <string name="text_login_with_facebook">Login with Facebook</string>
    <string name="text_login_with_google">Login with Google \t\t\t</string>
    <string name="text_verify">Verify</string>
    <string name="text_remember_me">Remember me</string>
    <string name="text_login">@string/login</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_sign_up"><u>SIGN UP</u></string>
    <string name="text_submit">Submit</string>
    <string name="text_contestant">Contestant</string>
    <string name="text_rater">Rate Videos</string>
    <string name="text_signin"><u>SIGN IN</u></string>
    <string name="text_name_of_song">Name of the song *</string>
    <string name="title_buy_subscription">Buy Subscription</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_disclaimer">Disclaimer</string>
    <string name="label_do_not_have_account">Don\'t have an account?</string>
    <string name="label_reset_password">Để nhận mã đặt lại mật khẩu của bạn, hãy nhập username mà bạn sử dụng để đăng nhập vào Grocery Shop</string>
    <string name="button_login">Login</string>
    <string name="hint_password">@string/password</string>
    <string name="title_confirm">Xác nhận</string>
    <string name="Titel_san_pham_khuyen_mai">Sản Phẩm Khuyến Mãi</string>
    <string name="Titel_rau_cu_traicay">Rau - Củ - Trái Cây</string>
    <string name="Titel_thit_trung_haisan">Thịt - Trứng - Hải Sản</string>
    <string name="Titel_thucphamdonglanh">Thực Phẩm Đông Lạnh</string>
    <string name="Titel_banhkeo_doanvat">Bánh Kẹo - Đồ Ăn Vặt</string>
    <string name="text_view_all">Tất cả</string>
</resources>