<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/COLOR_GRAY_BG"
    android:orientation="vertical">

    <com.example.grocery_shop.customview.toolbar.ToolBarApp
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawable_start="@drawable/ic_arrow_left"
        app:title="Thay đổi mật khẩu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_small">

        <TextView
            android:id="@+id/tv_forgot_password_login"
            style="@style/TextContentNormal"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/spacing_tiny"
            android:fontFamily="@font/beausanspro_semibold"
            android:text="@string/label_reset_password"
            android:textColor="@color/COLOR_GRAY19" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_medium"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/border_edittext"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_register_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/spacing_tiny"
                android:layout_marginEnd="@dimen/spacing_tiny"
                android:backgroundTint="@color/colorWhite"
                android:maxLength="15"
                android:hint="@string/text_user_name"
                android:singleLine="true"
                android:textColor="@color/black" />

        </LinearLayout>


        <Button
            android:id="@+id/layout_submit_forgot"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_medium"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/title_confirm"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimary"
            />

    </LinearLayout>

</LinearLayout>