<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.HomeFragment">

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical"
            tools:context=".ui.home.HomeFragment">

            <ViewFlipper
                android:id="@+id/Viewflipper"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_110sdp">

            </ViewFlipper>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:fontFamily="@font/beausanspro_bold"
                    android:text="@string/Titel_san_pham_khuyen_mai"
                    android:textColor="@color/teal_700" />

                <LinearLayout
                    android:id="@+id/layout_viewAllSale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/_3sdp"
                        android:text="@string/text_view_all"
                        android:textColor="@color/color_viewAll"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="normal" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/ic_view_all" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_2sdp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_productSale"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:fontFamily="@font/beausanspro_bold"
                    android:text="@string/Titel_rau_cu_traicay"
                    android:textColor="@color/teal_700" />

                <LinearLayout
                    android:id="@+id/layout_viewAllVegetable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/_3sdp"
                        android:text="@string/text_view_all"
                        android:textColor="@color/color_viewAll"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="normal" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/ic_view_all" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_2sdp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_Vegetable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:fontFamily="@font/beausanspro_bold"
                    android:text="@string/Titel_thit_trung_haisan"
                    android:textColor="@color/teal_700" />

                <LinearLayout
                    android:id="@+id/layout_viewAllFood"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/_3sdp"
                        android:text="@string/text_view_all"
                        android:textColor="@color/color_viewAll"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="normal" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/ic_view_all" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_2sdp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_Foods"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:fontFamily="@font/beausanspro_bold"
                    android:text="@string/Titel_thucphamdonglanh"
                    android:textColor="@color/teal_700" />

                <LinearLayout
                    android:id="@+id/layout_viewAllFrozenFoods"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/_3sdp"
                        android:text="@string/text_view_all"
                        android:textColor="@color/color_viewAll"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="normal" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/ic_view_all" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_2sdp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_FrozenFoods"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:fontFamily="@font/beausanspro_bold"
                    android:text="@string/Titel_banhkeo_doanvat"
                    android:textColor="@color/teal_700" />

                <LinearLayout
                    android:id="@+id/layout_viewAllConfectionery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/_3sdp"
                        android:text="@string/text_view_all"
                        android:textColor="@color/color_viewAll"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="normal" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/ic_view_all" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_2sdp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_Confectionery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>